--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "browser-sync start --server --serveStatic src --files 'src/**/*' --no-inject-changes --directory",
-    "build": "babel src --out-dir dist --copy-files --presets=env"
+    "build": "mkdir -p dist && cp -r src/* dist && babel src --out-dir dist --presets=env --ignore lib/*"
   },
   "author": "mwcz <mwc@clayto.com>",
   "license": "GPL-3.0",
