--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "postinstall": "echo \"Play nice!\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "browser-sync start --server --serveStatic src --files 'src/**/*' --no-inject-changes --directory",
-    "leader-server": "mongodb-runner start && parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
+    "leader-server-test": "mongodb-runner start && parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
+    "leader-server-prod": "parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
     "build": "mkdir -p dist && cp -r src/* dist && babel src --out-dir dist --presets=env --ignore lib/*"
   },
   "author": "mwcz <mwc@clayto.com>",
