added a script to populate the leaderboard

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "browser-sync start --server --serveStatic src --files 'src/**/*' --no-inject-changes --directory",
     "leader-server-test": "mongodb-runner start && parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
     "leader-server-prod": "parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
-    "build": "mkdir -p dist && cp -r src/* dist && babel src --out-dir dist --presets=env --ignore lib/*"
+    "build": "mkdir -p dist && cp -r src/* dist && babel src --out-dir dist --presets=env --ignore lib/*",
+    "populate-leaders": "sh ./populate_leaders.sh"
   },
   "author": "mwcz <mwc@clayto.com>",
   "license": "GPL-3.0",
