--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "browser-sync": "^2.18.2"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "mongodb-runner": "^3.4.0",
-    "parse-server": "^2.3.7"
+    "parse-server": "^2.3.7",
+    "socket.io": "^2.1.0"
   }
 }
