--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A videogame for Red Hat Summit 2017.",
   "main": "index.js",
   "scripts": {
-    "postinstall": "echo \"Play nice!\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "browser-sync start --server --serveStatic src/client --files 'src/client/**/*' --no-inject-changes --directory",
+    "start": "npm run launcher-server & npm run serve",
+    "launcher-server": "node src/server/server.js",
+    "serve": "browser-sync start --server --serveStatic src/client --files 'src/client/**/*' --no-inject-changes --directory",
     "leader-server-test": "mongodb-runner start && parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
     "leader-server-prod": "parse-server --appId ENGAGE --masterKey ENGAGE --databaseURI mongodb://localhost/engage",
     "build": "mkdir -p dist && cp -r src/client/* dist && babel src/client --out-dir dist --presets=env --ignore lib/*",
-    "populate-leaders": "sh ./populate_leaders.sh"
+    "populate-leaders": "sh ./populate_leaders.sh",
+    "postinstall": "echo \"Play nice!\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mwcz <mwc@clayto.com>",
   "license": "GPL-3.0",
